<resources>
    <string name="app_name">ProjectVersion1</string>
    <string name="title_activity_task_viewer">TaskViewer</string>


    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="add_edit_task">Add/Edit Task</string>
    <string name="title_location_list">Locations</string>
    <string name="title_location_detail">Location Detail</string>
    <string name="location_prompt">Select Location:</string>
    <string name="task_prompt">Select Task:</string>
    <string name="employee_prompt">Select Employee:</string>
    <string name="room_prompt">Select Room:</string>
    <string name="address_line_one">Address Line One:</string>
    <string name="address_line_two">Address Line Two:</string>
    <string name="location_city">City</string>
    <string name="location_state">State/Province/Region</string>
    <string name="location_zip">Zip Code</string>
    <string name="location_create">Create Location</string>
    <string name="location_edit">Go To Rooms</string>
    <string name="new_location_text">New Location</string>
    <string name="new_room_text">Add New Rooms</string>
    <string name="input_room_hint">Input Room Name</string>
    <string name="add_room_button">Add</string>
    <string name="finish_adding_rooms">Finish</string>

    <string-array name="location_array">
        <item>--Select Location--</item>
        <item>226 Feustal</item>
        <item>43 Ketcham</item>
        <item>24 Penataquit</item>
        <item>17 First</item>
        <item>15 North Clinton</item>
    </string-array>

    <string-array name="task_array">
        <item>--Select Task--</item>
        <item>Install Toilet</item>
        <item>Install Faucet</item>
        <item>Toilet - OOO</item>
        <item>Faucet - 000</item>
    </string-array>

    <string-array name="employee_array">
        <item>--Select Employee--</item>
        <item>Any</item>
        <item>John Doe</item>
        <item>Jim Doe</item>
        <item>Jane Doe</item>
    </string-array>

    <string-array name="room_array">
        <item>--Select Room--</item>
        <item>Kitchen</item>
        <item>Living Room</item>
        <item>Bathroom 1</item>
        <item>Bathroom 2</item>
        <item>Bedroom 1</item>
        <item>Bedroom 2</item>
        <item>Bedroom 3</item>
        <item>Exterior</item>
    </string-array>
    <string name="title_activity_admin_locations">AdminLocationsActivity</string>

    <string-array name="room_choices">
        <item>-Select Room-</item>
        <item>Kitchen</item>
        <item>Dining Room</item>
        <item>Living Room</item>
        <item>Den</item>
        <item>Bedroom</item>
        <item>Bathroom</item>
        <item>Interior Misc</item>
        <item>Exterior Misc</item>
        <item>Interior Common Area</item>
        <item>Exterior Common Area</item>
    </string-array>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="addtask">Add Task</string>
    <string name="returnstring">return</string>


    <!-- Strings related to login -->

    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="submit">Submit</string>


    <string name="inspection">Inspection</string>

    <string name="kitchen">Kitchen</string>
    <string name="dining_room">Dining Room</string>
    <string name="living_room">Living Room</string>
    <string name="den">Den</string>

    <string name="bedroom_1">Bedroom 1</string>
    <string name="bedroom_2">Bedroom 2</string>
    <string name="bedroom_3">Bedroom 3</string>
    <string name="bedroom_4">Bedroom 4</string>

    <string name="bathroom_1">Bathroom 1</string>
    <string name="bathroom_2">Bathroom 2</string>
    <string name="bathroom_3">Bathroom 3</string>


    <string name="acceptable">Acceptable</string>
    <string name="ceiling">Ceiling</string>
    <string name="walls">Walls</string>
    <string name="doors">Doors</string>
    <string name="floor">Floor</string>
    <string name="fridge">Fridge</string>
    <string name="stove">Stove</string>
    <string name="microwave">Microwave</string>
    <string name="dishwasher">Dishwasher</string>
    <string name="appliances">Appliances</string>
    <string name="plumbing">Plumbing/Sink</string>
    <string name="cabinets">Cabinets</string>
    <string name="electric_fixtures">Electric Fixtures</string>
    <string name="windows_blinds">Windows/Blinds</string>
    <string name="furniture">Furniture</string>
    <string name="other">Other</string>
    <string name="tasktext">Tasks and Work Orders</string>
    <string name="locations">Locations</string>


</resources>




